Bug 103373 - FIREBIRD: Tables could only be created, when *.odb-file has just been created.
Summary: FIREBIRD: Tables could only be created, when *.odb-file has just been created.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: 76072
  Show dependency treegraph
 
Reported: 2016-10-21 06:26 UTC by Robert Großkopf
Modified: 2016-11-06 18:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2016-10-21 06:26:53 UTC
This buggy behavior only appears with LO 5.3.0.0.alpha0, because it is the special behavior with the new internal Firebird-database 3.0, which is introduced with LO 5.3:

Create a new Firebird-database.
Create a table with GUI (
would also work with direct SQL with
CREATE TABLE "Table1" ("ID" INTEGER NOT NULL,"Name" VARCHAR(100), PRIMARY KEY  ("ID"))
)
Save the table.
You could also create more tables - is possible at this time.
You could also create queries, views ...

Now close the database.
Reopen the database.
Try to create a new table or view: You are not allowed. "There is no privilege for this operation"
Comment 1 Julien Nabet 2016-10-23 20:28:38 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
I noticed this on console:
warn:connectivity.firebird:736:1:connectivity/source/drivers/firebird/Statement.cxx:126: isc_dsql_execute failed
warn:connectivity.firebird:736:1:connectivity/source/drivers/firebird/Util.cxx:52: firebird_sdbc error:
*unsuccessful metadata update
*CREATE TABLE Tasks2 failed
*There is no privilege for this operation
caused by
'CREATE TABLE "Tasks2" ("ID" INTEGER NOT NULL,"TaskID" INTEGER, PRIMARY KEY  ("ID"))'


Lionel/Tamas: one for you?
Comment 2 Alex Thurgood 2016-10-25 08:23:47 UTC
Confirming also on Ubuntu 16.04, with LOdev530 my own master build from 24/10/2016


I see the same error message as Julien, but this is also displayed in the UI by clicking on the "More" button of the UI displayed error message.
Comment 3 Alex Thurgood 2016-10-25 08:25:52 UTC
I would increase the priority of this bug, as it currently means that a user has to design/create all of their tables on first creation of the ODB file, which is a pretty big limitation in terms of user functionality.
Comment 4 Commit Notification 2016-10-26 07:54:09 UTC
Wastack committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=41832d27c3325808333c21b9181db84ae9788978

tdf#103373 create and connect with default user

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Robert Großkopf 2016-11-06 18:44:02 UTC
Could confirm the bug is fixed.
Created a table in an existing Firebird database, could also add fields later.

Tested with
Version: 5.3.0.0.alpha1+
Build ID: 5d39c2013374727b1c8f147b8b99d54402a7ff02
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; VCL: gtk2; Layout Engine: old; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-11-02_00:55:24
Locale: de-DE (de_DE.UTF-8); Calc: group