tdf#103373 create and connect with default user

For an embedded Firebird database resolve authentification with a
default username and password (hardcoded) instead of trusted
authentification.

Change-Id: I54ee04898a8b2bedc9a24001c64173400769f416
Reviewed-on: https://gerrit.libreoffice.org/30160
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>